# tensegrity-vertical-stability

./: .gitignore  README.md
conf/default/: boost.conf.default  bullet.conf.default  gmocktest.conf.default  jsoncpp.conf.default  neuralnet.conf.default
docker/: Dockerfile
src/: .CMakeLists.txt.swp  CMakeLists.txt
src/core/: tgBasicActuator.cpp  tgBasicActuator.h  tgBulletRenderer.cpp  tgModel.cpp  tgModel.h  tgSimView.cpp  tgSimViewGraphics.cpp  tgSimViewGraphics.h
src/dev/: CMakeLists.txt  README.md
src/dev/gym-tensegrity/: .gitignore  README.md  setup.py
src/dev/gym-tensegrity/gym_tensegrity/: __init__.py
src/dev/gym-tensegrity/gym_tensegrity/envs/: README.md  __init__.py  jumper_env.py  jumper_model.py  jumper_test.py
src/dev/gym-tensegrity/learning_scripts/rllib/: evaluate.py
src/dev/gym-tensegrity/learning_scripts/rllib/trained_agents/train_025_rep_act1_restL/: experiment_state-2020-01-21_19-35-17.json
src/dev/gym-tensegrity/learning_scripts/rllib/trained_agents/train_025_rep_act1_restL/ARS_jumper_29224120_2020-01-21_19-35-20j61sj43o/: error.txt  events.out.tfevents.1579635373.c221379d9cf3  params.json  params.pkl  (+2 more)
src/dev/gym-tensegrity/learning_scripts/rllib/training_scripts/: train.py
src/dev/jumper/: AppJumperModel.cpp  CMakeLists.txt  JSON_Structure.cpp  JSON_Structure.h  JumperModel.cpp  JumperModel.h  LengthController.cpp  LengthController.h  TCP.cpp  TCP.h
src/dev/jumper/media/photos/Drop_from_Height_Stablize/: photo_crop.py
src/dev/jumper/util/: helper.sh
src/examples/: CMakeLists.txt
src/examples/3_prism/: CMakeLists.txt
(+242 files in other folders)
